fixed top padding in mobile view so that collapsed sidebar is visible

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -41,7 +41,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .navPusher {
     display: block;
-    padding-top: 100px;
+    padding-top: 150px;
 }
 
 .navPusher .wrapper {
