--- a/website/static/css/sidebar.css
+++ b/website/static/css/sidebar.css
@@ -15,4 +15,5 @@
 .toc .toggleNav .navGroup .navGroupCategoryTitle {
     color: #151B3B;
     margin-bottom: 15px;
+    font-weight: 400;
 }
